경로 재설정

--- a/index.html
+++ b/index.html
@@ -28,51 +28,51 @@
     <main>
       <article>
         <section>
-          <a href="./template/07-template/member1.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/template/07-template/member1.html">
             <h3>프로필 만들기</h3>
-            <img src="./assets/images/01.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/01.png" />
           </a>
         </section>
         <section>
-          <a href="./template/08-template/index.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/template/08-template/index.html">
             <h3>기업의 기본 웹페이지</h3>
-            <img src="./assets/images/02.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/02.png" />
           </a>
         </section>
         <section>
-          <a href="./template/09-template/index.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/template/09-template/index.html">
             <h3>밤 낯이 바뀌는 마을 애니메이션</h3>
-            <img src="./assets/images/03.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/03.png" />
           </a>
         </section>
         <section>
-          <a href="./template/10-template/index.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/template/10-template/index.html">
             <h3>360도 회전하는 파노라마 소개 페이지</h3>
-            <img src="./assets/images/04.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/04.png" />
           </a>
         </section>
         <section>
-          <a href="./template/11-template/index.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/template/11-template/index.html">
             <h3>flex 레이아웃 기반의 동영상 웹 페이지</h3>
-            <img src="./assets/images/05.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/05.png" />
           </a>
         </section>
         <section>
-          <a href="./template/12-template/index.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/template/12-template/index.html">
             <h3>자동으로 음악이 나오는 뮤직 플레이어</h3>
-            <img src="./assets/images/06.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/06.png" />
           </a>
         </section>
         <section>
-          <a href="./template/13-template/index.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/template/13-template/index.html">
             <h3>핀터레스트 스타일의 반응형 웹 갤러리</h3>
-            <img src="./assets/images/07.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/07.png" />
           </a>
         </section>
         <section>
-          <a href="./special_sources/special-template/index.html">
+          <a href="https://minna1025.github.io/interactiveWebPage/special_sources/special-template/index.html">
             <h3>플러그인을 사용한 스와이프 갤러리</h3>
-            <img src="./assets/images/08.png" />
+            <img src="https://minna1025.github.io/interactiveWebPage/assets/images/08.png" />
           </a>
         </section>
       </article>
