--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <h2>Hello, stranger!</h2>
-      <p>Do you wanna What I done?</p>
+      <p>Do you wanna see What I done?</p>
     </header>
     <main>
       <article>
