--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section>
           <a href="https://minna1025.github.io/interactiveWebPage/template/09-template/index.html">
-            <h3>밤 낯이 바뀌는 마을 애니메이션</h3>
+            <h3>밤 낮이 바뀌는 마을 애니메이션</h3>
             <img src="https://minna1025.github.io/interactiveWebPage/assets/images/03.png" />
           </a>
         </section>
