--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       section { width: 350px; text-align: center;}
       section img { width: 100%; height: 250px; object-fit: cover; transition: all .5s;}
       a { color: #969696;  transition: all .5s;}
-      a h3 {font-size: 15px}
+      h3 {font-size: 15px;}
       section:hover a { color:#111;}
       section:hover img { transform: scale(1.1);}
     </style>
